--- a/RotatingCards/css/style.css
+++ b/RotatingCards/css/style.css
@@ -33,3 +33,30 @@ body {
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.993);
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.25); }
+
+.cards {
+  padding: 6rem 6rem; }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 35rem; }
+  .card__side {
+    height: 35rem;
+    border-radius: 15px;
+    transition: all 0.8s;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80%; }
+    .card__side--front {
+      background-color: orangered; }
+    .card__side--back {
+      background-color: goldenrod;
+      transform: rotateY(-180deg); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
