--- a/RotatingCards/css/style.css
+++ b/RotatingCards/css/style.css
@@ -43,18 +43,16 @@ body {
   position: relative;
   height: 35rem; }
   .card__side {
+    box-shadow: 0 2.5rem 8rem rgba(0, 0, 0, 0.35);
     height: 35rem;
     border-radius: 15px;
-    transition: all 0.8s;
+    transition: all 0.8s ease;
     backface-visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
     width: 80%; }
-    .card__side--front {
-      background-color: orangered; }
     .card__side--back {
-      background-color: goldenrod;
       transform: rotateY(-180deg); }
   .card:hover .card__side--front {
     transform: rotateY(180deg); }
